# erust-template-stm32f103

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
