[package]
name = "erust-motor-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "rt", "medium"] }

# panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-rtt"] }
rtt-target = "0.5"
